# Azure_Sky

./: .gitignore  App.py  Engine.py  Hooks.py  LICENSE  Metrics.py  Plots.py  README.md  __init__.py  azure_optim.py  generate_plots.py  pyproject.toml  test_smoke.py  usage_example.py
Backend/Benchmarks/: Ackley.py  Adjiman.py  Base.py  Brent.py  Himmelblau.py  __init__.py
Backend/ML_Tasks/: CIFAR10Runner.py  MNISTRunner.py  __init__.py
Backend/optimizers/: RMSprop.py  SGD.py  __init__.py  adam.py  adamw.py  azure_optim.py  base.py
benchmarking/: README.md  plot_himmelblau_from_json.py  run_himmelblau_scale.py  run_suite.py
benchmarking/benchmarks/: math_functions.py  nn_landscapes.py
benchmarking/configs/: suite_config.py
benchmarking/reporters/: report_generator.py
benchmarking/results/: dimensionality_sweep.json  nn_suite.json  nonconvexity_sweep.json  summary_table.md
benchmarking/runners/: suite_runner.py
