[project]
name = "azure"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "benchmarkfcns==1.0.0",
    "gradio>=5.34.0",
    "matplotlib>=3.10.3",
    "numpy==1.26.0",
    "pytorch-lightning==2.5.1",
    "scipy>=1.15.3",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
]
